feat: add admin user management system
- Add Django admin user configuration to .env.sample with ADMIN_USERNAME, ADMIN_PASSWORD, ADMIN_EMAIL variables
- Create Django management command for creating admin users from environment variables
- Add create-admin.sh script and Makefile target for automated admin user creation
- Fix header tooltip z-index issue to display properly over hero section
- Clean up unused rating fields in Product model
- Fix favorites collection template path reference
- Reorganize .env.sample with proper section headers for better configuration management

--- a/.env.sample
+++ b/.env.sample
@@ -9,5 +9,15 @@ POSTGRES_USER=<database_user>
 POSTGRES_PASSWORD=<database_password>
 # Hostname or Docker service name of the PostgreSQL container
 POSTGRES_HOST=<database_host_or_service_name>
+
+# ──────────────── Django Application Settings ────────────────
 # Path to datasets dir
-DATASETS_DIR=/usr/src/datasets
+DATASETS_DIR=<path_to_datasets>
+
+# ──────────────── Django Admin User Configuration ────────────────
+# Username for Django admin superuser
+ADMIN_USERNAME=<admin_username>
+# Password for Django admin superuser
+ADMIN_PASSWORD=<admin_password>
+# Email address for Django admin superuser
+ADMIN_EMAIL=<admin_email>
