feat(api): add DRF endpoints for ratings and favorites with serializers and choices
- add RatingActionChoices and FavoriteActionChoices
- implement APIViews: like/dislike toggle, rating create/update/delete, favorite toggle, collection create/set-default
- add request/response serializers for ratings and favorites
- wire API routes under /api/v1/*
- fix AppConfig name to apps.api.rest
- deps: add djangorestframework, django-filter, markdown

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,11 @@ dependencies = [
     "django>=5.2.5",
     "django-debug-toolbar>=6.0.0",
     "django-extensions>=4.1",
+    "django-filter>=25.1",
+    "djangorestframework>=3.16.1",
     "factory-boy>=3.3.3",
     "faker>=37.6.0",
+    "markdown>=3.8.2",
     "numpy>=2.3.2",
     "pandas>=2.3.2",
     "pandas-stubs>=2.3.2.250827",
