feat(db): add postgresql config and optimize queries
- Add a production-ready `postgresql.conf` with performance tunings.
- Mount the new configuration in `docker-compose.yml`.
- Optimize product season filtering with an `Exists` subquery.
- Add non-locking database indexes using `AddIndexConcurrently`.
- Refactor price range filter to use `Coalesce` for clarity.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,10 @@ services:
       - "5432:5432"
     volumes:
       - postgres-django-store-data:/var/lib/postgresql/data/
+      - ./configs/postgresql/postgresql.conf:/etc/postgresql/postgresql.conf:ro
     networks:
       - django-store-network
+    command: [ "postgres", "-c", "config_file=/etc/postgresql/postgresql.conf" ]
     healthcheck:
       test: >
         sh -c "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB} -h 127.0.0.1 || exit 1"
