--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "django-debug-toolbar>=6.0.0",
     "django-extensions>=4.1",
     "django-filter>=25.1",
+    "django-pgviews-redux>=0.11.0",
     "djangorestframework>=3.16.1",
     "factory-boy>=3.3.3",
     "faker>=37.6.0",
